--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,5 +1,5 @@
 :root {
-    --primary: #fff;
+    --primary: 	rgb(0,255,255);
 }
 
 .btn {
@@ -35,7 +35,7 @@ font: size 20px; ;
 }
 
 .btn--medium:hover, .btn--large:hover {
-    background: white;
-    color:#242424;
+    background: 	rgb(0,255,255);
+    color:	white;
     transition: all 0.3s ease-out;
 }
