--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
+    background: linear-gradient(90deg, rgb(57, 70, 70) 0%, rgb(26, 23, 23) 100%);
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,13 +13,13 @@
   .navbar-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: right;
     height: 80px;
     max-width: 1500px;
   }
   
   .navbar-logo {
-    color: #fff;
+    color:	rgb(0,255,255);
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
@@ -50,7 +50,7 @@
   }
   
   .nav-links {
-    color: #fff;
+    color:	rgb(0,255,255);
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -64,7 +64,7 @@
   }
   
   .fa-bars {
-    color: #fff;
+    color: 	rgb(0,255,255);
   }
   
   .nav-links-mobile {
